# TitanicSurvivalPrediction

./: app.py  data_processor.py  model_evaluator.py  model_explainer.py  model_trainer.py  pyproject.toml  test.csv  utils.py
attached_assets/: Pasted-TypeError-Expected-sequence-or-array-like-got-class-NoneType-Traceback-File-home-runner-w-1741879828159.txt
